CharClipboardRepo.charClipboardI was changed to Deque if chosen keyboard is deleted in IME send keyboards to the OS small changes